modernize dockerfile + make SAPCC 2.13.0 run